add userguide. Update Docs and site admin

--- a/Source code/proyectoFinal/templates/matches/searchMatch.html
+++ b/Source code/proyectoFinal/templates/matches/searchMatch.html
@@ -149,7 +149,7 @@
     <div class="main_bg">
     <div class="container">
       <div class="main_grid1">
-        <h3 class="style pull-left">Complejos</h3>
+        <h3 class="style pull-left">Partidos</h3>
         <div class="clearfix"></div>
       </div>
     </div>
