--- a/Source code/proyectoFinal/templates/tournaments/tournament_form.html
+++ b/Source code/proyectoFinal/templates/tournaments/tournament_form.html
@@ -200,7 +200,7 @@
       </div>
     </div>
     </div>
-    <div class="footer_bg"><!-- start footer -->
+    <div class="footer_bg">
     <div class="container">
       <div class="footer">
         <div class="col-md-4 footer1_of_3">
@@ -246,4 +246,4 @@
     <script src="{% static "js/bootstrap.min.js" %} " type="text/javascript"></script>
     
   </body>
-</html>-->
+</html>
