--- a/Source code/proyectoFinal/templates/fixtures/listFixtures.html
+++ b/Source code/proyectoFinal/templates/fixtures/listFixtures.html
@@ -156,8 +156,8 @@
                       <td><center><p>Nombre del torneo</p></center></td>
                       <td><center><p>Ver fixture</p></center></td>
                       {% ifequal user.get_profile.userType 'PR' %}
-                      <td><center><p>eliminar fixture</p></center></td>
                       <td><center><p>Actualizar fixture</p></center></td>
+                      <td><center><p>Eliminar fixture</p></center></td>
                       <td><center><p>Agregar partido</p></center></td>
                       {%endifequal%}
                       
