--- a/Source code/proyectoFinal/templates/matches/listMatchForFixture.html
+++ b/Source code/proyectoFinal/templates/matches/listMatchForFixture.html
@@ -6,18 +6,18 @@
     <link rel='stylesheet' type='text/css' href="{% static "css/bootstrap.min.css" %}">
     <link rel='stylesheet' type='text/css' href="{% static "css/bootstrap.css" %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="application/x-javascript"> 
-      addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); 
-      function hideURLbar(){ 
-        window.scrollTo(0,1); 
-      } 
+    <script type="application/x-javascript">
+      addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
+      function hideURLbar(){
+        window.scrollTo(0,1);
+      }
     </script>
     <link rel="stylesheet" type="text/css" media="all" href="{% static "css/blue.css" %}" />
     <meta charset="UTF-8"/>
     <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
     <script src="{% static "js/menu.js" %} " type="text/javascript"></script>
   </head>
-  <body>  
+  <body>
     <div class="header_bg">
       <div class="container">
         <div class="header">
@@ -28,14 +28,14 @@
             <a id="touch-menu" class="mobile-menu" href="#">Menu</a>
             <nav>
               <ul class="menu list-unstyled">
-                
-                
+
+
                 {% if user.is_anonymus %}
-                  
+
                     <li><a href="/login/">Ingresar</a></li>
                     <li><a href="/register/">Registrarse</a></li>
-                  
-                {%endif%}    
+
+                {%endif%}
                 <li ><a href="#">Complejos</a>
                     <ul class="sub-menu list-unstyled">
                       <li ><a href="/complexes/">Ver complejos</a>
@@ -53,22 +53,22 @@
                           <li ><a href="/addCourt">Nueva cancha</a></li>
                       {%endifequal%}
                           <li ><a href="/searchcourt">Buscar cancha</a></li>
-                      
+
 
                     </ul>
                 </li>
 
                 {%if user.is_authenticated%}
-                  
+
                   <li ><a href="#">Reservaciones</a>
-                    <ul class="sub-menu list-unstyled">                     
+                    <ul class="sub-menu list-unstyled">
                       <li ><a href="/reservations">Ver reservaciones</a></li>
                       <li ><a href="/newreservation">Nueva reservación</a></li>
                     </ul>
                 </li>
                 {%endif%}
                 <li ><a href="#">Equipos</a>
-                    <ul class="sub-menu list-unstyled">                     
+                    <ul class="sub-menu list-unstyled">
                       <li ><a href="/teams">Ver equipos</a></li>
                       <li ><a href="/searchteam">Buscar equipo</a></li>
                       {% ifequal user.get_profile.userType 'CM' %}
@@ -77,7 +77,7 @@
                     </ul>
                 </li>
                 <li ><a href="#">Torneos</a>
-                    <ul class="sub-menu list-unstyled">                     
+                    <ul class="sub-menu list-unstyled">
                       <li ><a href="/tournaments">Ver torneos</a></li>
                       <li ><a href="/searchtournament">Buscar torneo</a></li>
                       {% ifequal user.get_profile.userType 'PR' %}
@@ -86,43 +86,43 @@
                     </ul>
                 </li>
                 <li ><a href="#">Fixtures</a>
-                    <ul class="sub-menu list-unstyled">                                           
-                      
+                    <ul class="sub-menu list-unstyled">
+
                       {%if user.is_authenticated%}
                       <li ><a href="/fixtures">Ver fixtures</a></li>
                       {%endif%}
-                      <li ><a href="/searchfixture">Buscar fixtures</a></li>                    
+                      <li ><a href="/searchfixture">Buscar fixtures</a></li>
 
                     </ul>
-                </li>       
+                </li>
                 <li ><a href="#">Estadisticas</a>
-                    <ul class="sub-menu list-unstyled">          
+                    <ul class="sub-menu list-unstyled">
                       {%if user.is_authenticated%}
                         <li ><a href="/playersinfo">Ver estadisticas</a></li>
                       {%endif%}
-                      <li ><a href="/searchplayerinfo">Buscar estadisticas</a></li>                    
+                      <li ><a href="/searchplayerinfo">Buscar estadisticas</a></li>
 
                     </ul>
-                </li>                             
-                {%if user.is_authenticated%}                
+                </li>
+                {%if user.is_authenticated%}
                   <li ><a href="#">Perfil</a>
                     <ul class="sub-menu list-unstyled">
                       {% ifequal user.get_profile.userType 'PR' %}
                       <li ><a href="#">Publicidades</a>
-                          <ul class="sub-menu list-unstyled"> 
+                          <ul class="sub-menu list-unstyled">
                             <li ><a href="/newpublish">Nueva publicidad</a></li>
-                            <li ><a href="/publicities">Ver mis publicidades</a></li>                                  
-                            
+                            <li ><a href="/publicities">Ver mis publicidades</a></li>
+
                           </ul>
                       </li>
-                      {% endifequal%}                                         
+                      {% endifequal%}
                       <li><a href="/update_user/{{user.get_profile.id}}">Actualizar perfil</a></li>
                       <li>
                         <a href="/update_telephone/{{user.get_profile.id}}">Actualizar telefono</a>
                       </li>
                       <li><a href="/delete_user/{{user.get_profile.id}}">Eliminar cuenta</a></li>
                     </ul>
-                  </li>             
+                  </li>
                   <li style="background-color:#178bbb"><a href="/salir/">Salir</a></li>
                 {%endif%}
                 {% if not user.is_authenticated %}
@@ -150,7 +150,7 @@
       <div class="blog">
           <div class="blog_main col-md-9">
 
-	          <div class="blog_list">       	    
+	          <div class="blog_list">
 				{%if fix%}
 				<div class="table-responsive">
             {%if partidos%}
@@ -163,13 +163,14 @@
                       <td><center><p>Fecha</p></center></td>
                       <td><center><p>Hora</p></center></td>
                       <td><center><p>Resultado</p></center></td>
+                      <td><center><p>Cancha</p></center></td>
                       {% ifequal user.get_profile.userType 'PR' %}
                       <td><center></center></td>
                       <td><center></center></td>
                       {%endifequal%}
 
-                      
-                    </tr>            
+
+                    </tr>
 						{% for match in partidos %}
 							<tr>
 								<td><center><img src="{% static "images/others/team-256.png" %}" width="32" height="32"></center></td>
@@ -183,10 +184,11 @@
                 <td><center><p>{{match.hour}}:{{match.minutes}}</p></center></td>
                 {%endifequal%}
                 <td><center><p>{{match.scoreLocal}}-{{match.scoreVisit}}</p></center></td>
+                <td><center><p>{{match.court.name}}</p></center></td>
 					       {% ifequal user.get_profile.userType 'PR' %}
                     <td>
                       <center>
-                        <a href="/addscore/{{match.id}}" class="btn btn-primary" role="button">Actualizar partido 
+                        <a href="/addscore/{{match.id}}" class="btn btn-primary" role="button">Actualizar partido
                         </a>
                       </center>
                     </td>
@@ -195,7 +197,7 @@
                         <a href="/deletematch/{{match.id}}" class="btn btn-primary" role="button">Borrar partido
                         </a>
                       </center>
-                    </td>                    
+                    </td>
                  {%endifequal%}
 							</tr>
 							  <!--<li>Local : <b> {{match.teamlocal.name}}</b> vs Visitante : <b> {{match.teamVisitant.name}}</b>
@@ -203,16 +205,16 @@
 						{% endfor %}
 						{%else%}
 							<div class="alert alert-info" role="alert"><p>El fixture  {{fix.name}} no tiene partidos aun</p></div>
-							
+
 					{%endif%}
 
                   </table>
 				{%else%}
 					<div class="alert alert-warning" role="alert"><p>No hay Fixtures ni partidos</p></div>
-					
+
 				{%endif%}
-                  
-                </div>	
+
+                </div>
 
               <div class="clearfix"></div>
             </div>
@@ -227,7 +229,7 @@
               <li><a href="#"><img src="{% static "images/others/ads_pic.jpg"%}" alt=""></a></li>
               {%endif%}
               {%if publish_second%}
-              <li><a href="#"><img src="{{MEDIA_URL}}{{publish_second.img}}" alt=""> </a></li>         
+              <li><a href="#"><img src="{{MEDIA_URL}}{{publish_second.img}}" alt=""> </a></li>
              {%else%}
               <li><a href="#"><img src="{% static "images/others/ads_pic.jpg"%}" alt=""></a></li>
               {%endif%}
@@ -244,7 +246,7 @@
                 <li><a href="/playersinfo">Estadisticas</a></li>
                 {% if user.is_authenticated %}
                 <li><a href="/fixtures/">Fixtures</a></li>
-                
+
                 {%endif%}
                 <li><a href="/searchmatch/">Buscar partidos</a></li>
                 <li class="active"><a href="/send_mail">Contacto</a></li>
@@ -261,13 +263,13 @@
         <div class="col-md-4 footer1_of_3">
           <div class="f_logo">
             <h2 style="color:white">MinutoGol</h2>
-          </div>    
+          </div>
           <p class="f_para">
-            <strong>MinutoGol</strong> es una herramienta que permite facilitar la administracion de 
+            <strong>MinutoGol</strong> es una herramienta que permite facilitar la administracion de
             complejos deportivos como asi tambien agilizar el proceso de reservas de canchas a diferentes complejos.
           </p>
          </div>
-         <div class="col-md-4 footer1_of_3"> 
+         <div class="col-md-4 footer1_of_3">
           <p>Telefono:&nbsp;<span>(+54) 0358 154228297</span></p>
           <p>Telefono:&nbsp;<span>(+54) 0358 154864587</span></p>
           <span class="">Email:&nbsp;<a href="mailto:minutogol@gmail.com">minutogol@gmail.com</a></span>
@@ -299,8 +301,6 @@
     </div>
     </div>
     <script src="{% static "js/bootstrap.min.js" %} " type="text/javascript"></script>
-    
+
   </body>
 </html>
-
-
